# re-diggn

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  ONBOARDING.md  README.md  pyproject.toml  test_mcp.ipynb  todo.md
.claude/: settings.json
.claude/agents/: backtesting-quant.md  code-reviewer.md  data-analyst.md  docs.md  experiment-tracker.md  ml-trainer.md  molecule-analyst.md
.serena/: project.yml
notebooks/exploration/: eurusd_m1_cleaning.ipynb  sl_tp_regressor_exploration.ipynb
reports/: eda_eurusd_m1_preprocessing.md  feature_reference.md
scripts/: build_exploration_notebook.py  clean_eurusd_m1.py  compute_macro_features.py  fetch_economic_calendar.py  merge_rates_to_parquet.py  populate_fundamental_features.py  reconstruct_swap_history.py  run_clean.ps1
src/draft/: _preprocessing.py
src/features/: __init__.py  indicators.py  situational.py  targets.py
src/pipelines/: __init__.py  compute_oracle_targets.py  session_baseline.py  sl_tp_regressor.py
tests/: conftest.py
