[project]
name = "re-diggn"
version = "0.1.0"
description = "ML-driven FX trading signals — EURUSD and major pairs"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=16.0",
    "numpy>=1.26",
    "optuna>=4.8.0",
    "pandas-ta-classic>=0.6.20",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
